# SkillBox

FinalProject/: CMakeLists.txt  README.md  answers.json  config.json  main.cpp  request.json
FinalProject/gtests/: CMakeLists.txt  ConverterJson_test.cpp  InvertedIndex_test.cpp  SearchServer_test.cpp  test1.cpp
FinalProject/include/: ConverterJson.h  InvertedIndex.h  JsonFill.h  SearchServer.h
FinalProject/resources/: file003.txt
FinalProject/resources/var2 (more texts)/: file001.txt  file002.txt  request.json
FinalProject/src/: ConverterJson.cpp  InvertedIndex.cpp  JsonFill.cpp  SearchServer.cpp
M11/M11_Task_1/: CMakeLists.txt  main.cpp
M11/M11_Task_2/: CMakeLists.txt  main.cpp
M11/M11_Task_3/: CMakeLists.txt  main.cpp
M11/M11_Task_4/: CMakeLists.txt  main.cpp
M12/M12_Task_1/: CMakeLists.txt  main.cpp
M12/M12_Task_2/: CMakeLists.txt  main.cpp
M12/M12_Task_3/: CMakeLists.txt  main.cpp
M12/M12_Task_4/: CMakeLists.txt  main.cpp
M13/M13_Task_1/: CMakeLists.txt  main.cpp
M13/M13_Task_2/: CMakeLists.txt  main.cpp
M13/M13_Task_3/: CMakeLists.txt  main.cpp
M14/M14_Task_1/: CMakeLists.txt  main.cpp
M14/M14_Task_2/: CMakeLists.txt  main.cpp
M14/M14_Task_3/: CMakeLists.txt  main.cpp
M14/M14_Task_4/: CMakeLists.txt  main.cpp
M14/M14_Task_5/: CMakeLists.txt  main.cpp
M15/M15_Task_1/: CMakeLists.txt  main.cpp
M15/M15_Task_2/: CMakeLists.txt  main.cpp
M15/M15_Task_3/: CMakeLists.txt  main.cpp
M15/M15_Task_4/: CMakeLists.txt  main.cpp
M16/M16_Task_1/: CMakeLists.txt  main.cpp
M16/M16_Task_2/: CMakeLists.txt  main.cpp
M16/M16_Task_3/: CMakeLists.txt  main.cpp
M16/M16_Task_4/: CMakeLists.txt  main.cpp
M16/M16_Task_5/: CMakeLists.txt  main.cpp
M17/M17_Task_1/: CMakeLists.txt  main.cpp
M17/M17_Task_2/: CMakeLists.txt  main.cpp
M17/M17_Task_3/: CMakeLists.txt  main.cpp
M18/M18_Task_1/: CMakeLists.txt  main.cpp
M18/M18_Task_2/: CMakeLists.txt  main.cpp
M18/M18_Task_3/: CMakeLists.txt  main.cpp
M19/M19_Task_1/: CMakeLists.txt  main.cpp
M19/M19_Task_2/: CMakeLists.txt  main.cpp  words.txt
M19/M19_Task_3/: CMakeLists.txt  main.cpp
M19/M19_Task_4/: CMakeLists.txt  main.cpp
M19/M19_Task_5/: CMakeLists.txt  main.cpp
M19/M19_Task_5/game_data/: answers.txt  questions.txt
M20/M20_Task_1/: CMakeLists.txt  main.cpp
M20/M20_Task_2/: CMakeLists.txt  main.cpp
M20/M20_Task_3/: CMakeLists.txt  main.cpp
M20/M20_Task_4/: CMakeLists.txt  main.cpp
M21/M21_Task_1/: CMakeLists.txt  main.cpp  statement.txt
M21/M21_Task_2/: CMakeLists.txt  main.cpp
M21/M21_Task_3/: CMakeLists.txt  main.cpp
M22/M22_Task_1/: CMakeLists.txt  main.cpp
M22/M22_Task_2/: CMakeLists.txt  main.cpp
M22/M22_Task_3/: CMakeLists.txt  main.cpp
M23/M23_Task_1/: CMakeLists.txt  main.cpp
M23/M23_Task_2/: CMakeLists.txt  main.cpp
M24/M24_Task_1/: CMakeLists.txt  main.cpp
M24/M24_Task_2/: CMakeLists.txt  main.cpp
M24/M24_Task_3/: CMakeLists.txt  main.cpp
M25/M25_Task_1/: CMakeLists.txt  main.cpp
M25/M25_Task_1/include/: functions.h
M25/M25_Task_1/src/: functions.cpp
M25/M25_Task_2/: CMakeLists.txt
M25/M25_Task_2/include/: CPU.h  DISK.h  GPU.h  KBD.h  RAM.h
M26/M26_Task_1/: CMakeLists.txt  main.cpp
M26/M26_Task_2/: CMakeLists.txt  main.cpp
M26/M26_Task_3/: CMakeLists.txt  main.cpp
M26/M26_Task_3/include/: Screen.h  Window.h
M26/M26_Task_3/src/: Screen.cpp  Window.cpp
M27/M27_Task_1/: CMakeLists.txt  main.cpp
M27/M27_Task_2/: CMakeLists.txt  main.cpp
M27/M27_Task_3/: CMakeLists.txt  main.cpp
M28/M28_Task_1/: CMakeLists.txt  main.cpp
M28/M28_Task_2/: CMakeLists.txt  main.cpp
M28/M28_Task_3/: CMakeLists.txt  main.cpp
M29/M29_Task_1/: CMakeLists.txt  main.cpp
M30/M30_Task_1/: CMakeLists.txt  main.cpp
M30/M30_Task_2/: CMakeLists.txt  main.cpp
M30/M30_Task_3/: CMakeLists.txt  main.cpp
M31/M31_Task_1/: CMakeLists.txt  main.cpp
M31/M31_Task_2/: CMakeLists.txt  main.cpp
M31/M31_Task_2/include/: Dog.h  Shared_ptr_toy.h  Toy.h
M31/M31_Task_2/src/: Dog.cpp  Shared_ptr_toy.cpp
M32/M32_Task_1/: CMakeLists.txt  main.cpp
M32/M32_Task_2/: CMakeLists.txt  main.cpp
M32/M32_Task_3/: CMakeLists.txt  main.cpp  record.pb.cc  record.pb.h  record.proto
M33/M33_Task_1/: CMakeLists.txt  main.cpp
M33/M33_Task_2/: CMakeLists.txt  main.cpp
M33/M33_Task_3/: CMakeLists.txt  main.cpp
M33/M33_Task_4/: CMakeLists.txt  main.cpp
M34/M34_Task_1/: CMakeLists.txt
M35/M35_Task_1/: CMakeLists.txt  main.cpp
M35/M35_Task_2/: CMakeLists.txt  main.cpp
M35/M35_Task_3/: CMakeLists.txt  main.cpp
M36/M36_Task_1/: CMakeLists.txt  main.cpp
M37/M37_Task_1/: CMakeLists.txt  CalcOperation.h  calc.ui  main.cpp
M37/M37_Task_3/: CMakeLists.txt  RemoteControl.h  main.cpp  remote.ui
M38/M38_Task_1/M38_Task_1/: CMakeLists.txt  main.cpp
M38/M38_Task_2/M38_Task_2/: CMakeLists.txt  main.cpp
(+41 files in other folders)
